# ckrough.github.io

./: .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  README.md  astro.config.mjs  index.html  mkdocs.yml  package-lock.json  package.json  params.json  pyproject.toml  sitemap.xml  tailwind.config.mjs
.agentspace/: workspace.json
.beads/: issues.jsonl
.claude/agents/: README.md
.claude/commands/: README.md
.github/workflows/: ci.yml  deploy.yml
contact/: index.html
docs/: contact.md  experience.md  index.md  services.md
docs/adr/: 000-template.md  001-example.md
docs/design/: architecture.md  development-standards.md
docs/projects/: ai-projects.md  drover.md  index.md  platform.md
experience/: index.html
projects/: index.html
projects/ai-projects/: index.html
projects/drover/: index.html
projects/platform/: index.html
public/: CNAME  llms.txt  robots.txt  sitemap.xml
search/: search_index.json
services/: index.html
src/components/: Card.astro  ExperienceItem.astro  Footer.astro  Header.astro  Hero.astro  ProjectCard.astro  ServiceCard.astro
src/content/: config.ts
src/content/notes/: corpus-shape-over-corpus-size.md  measuring-a-claude-code-skill.md
src/devkroughorg/: __init__.py
src/layouts/: BaseLayout.astro
src/pages/: contact.astro  experience.astro  index.astro  inspiration.astro  methods.astro  projects.astro  references.astro  rss.xml.js  services.astro
src/pages/notes/: [...slug].astro  index.astro
src/pages/projects/: advisors.astro  drover.astro  retriever.astro
src/styles/: global.css
tests/: conftest.py
tmp/: VISUAL-IDENTITY.md
